--- a/PAGINAS/Tecnologia/Lo-mas-nuevo.html
+++ b/PAGINAS/Tecnologia/Lo-mas-nuevo.html
@@ -65,7 +65,7 @@
 
                 #Trailer{
                     Position:absolute;
-                    top:400px;
+                    top:1000px;
                     left:100px;
                     right:10px;
                 }
@@ -85,33 +85,6 @@
                     top:600px;
                     left:100px;
                     right:10px;
-                }
-
-                #AMAZON{
-                    Position:absolute;
-                    top:600px;
-                    left:350px;
-                    right:110px;
-                    background-color:black;
-                    color:yellowgreen;
-                    text-decoration:none;
-                }
-
-                #LOCK{
-                    Position:absolute;
-                    top:800px;
-                    left:100px;
-                    right:10px;
-                }
-
-                #PASS{
-                    Position:absolute;
-                    top:800px;
-                    left:350px;
-                    right:110px;
-                    background-color:black;
-                    color:yellowgreen;
-                    text-decoration:none;
                 }
 
                 #SECC1{
@@ -151,41 +124,20 @@
                 <TH colspan="4" bgcolor="black"><font color="white" size="5" face="Arial"><marquee>“Debes hacer cosas que realmente sean importantes, pero también debes divertirte, porque si no, no tendrás éxito.”</marquee></font></TH>
             </TR>
             <TR>
-                <TH STYLE="width:15px;" colspan="1"><img src="LOGO.png" width="190"></TH><TH bgcolor="black"><img src="te.jpg" width="1000"></TH>
+                <TH STYLE="width:15px;" colspan="1"><img src="LOGO.png" width="190"></TH><TH bgcolor="black"><img src="te.png" width="1000"></TH>
             </TR>
          </TABLE>
-            <div id="header">
-                <ul class="nav">
-                    <li><a href="Lo-mas-nuevo.html"><font color="white" size="5" face="Arial">LO MAS NUEVO</font></a></li>
-                    <li><a href="Mejores.html"><font color="white" size="5" face="Arial">MEJORES PRODUCTOS</font></a></li>
-                    <li><a href="Noticias.html"><font color="white" size="5" face="Arial">NOTICIAS</font></a></li>
-                    <li><a href="Ofertas.html"><font color="white" size="5" face="Arial">OFERTAS</font></a></li>
-                    <li><a href="../../Pagina Principal/Pagina principal.html"><font color="white" size="5" face="Arial">INICIO</font></a></li>
-                </ul>
-            </div>
+        <div id="header">
+            <ul class="nav">
+                <li><a href="Lo-mas-nuevo.html"><font color="white" size="5" face="Arial">LO MAS NUEVO</font></a></li>
+                <li><a href="Mejores.html"><font color="white" size="5" face="Arial">MEJORES PRODUCTOS</font></a></li>
+                <li><a href="Noticias.html"><font color="white" size="5" face="Arial">NOTICIAS</font></a></li>
+                <li><a href="Ofertas.html"><font color="white" size="5" face="Arial">OFERTAS</font></a></li>
+                <li><a href="../../Pagina Principal/Pagina principal.html"><font color="white" size="5" face="Arial">INICIO</font></a></li>
+            </ul>
+        </div>
             <div id="Trailer">
                 <b><img src="ai.png"></b>
-            </div>
-            <div id="AILO">
-                <b><A href="#SECC10"><font color="yellowgreen" size="8" face="Arial">Airbnb apunta a ofrecer alojamiento gratuito a los respondedores de COVID-19</font></A></b><br>
-                <h><font color="yellowgreen" size="5" face="Arial">Una nueva opcion permitiria a los anfitriones ofrecer hogares de forma gratuita a los trabajadores de la salud y los primeros en responder.</h><br>
-                <b><font color="yellowgreen" size="2" face="Arial" ALIGN="right">26 DE MARZO DE 2020</font></b>
-            </div>
-            <div id="ama">
-                <b><img src="am.png"></b>
-            </div>
-            <div id="AMAZON">
-                <b><A href="#SECC20"><font color="yellowgreen" size="8" face="Arial">No, Jeff Bezos no quiere tus donaciones publicas para los trabajadores de Amazon</font></A></b><br>
-                <h><font color="yellowgreen" size="5" face="Arial">Algunos han dicho que Amazon esta pidiendo tu dinero. Pero esa no es toda la historia.</h><br>
-                <b><font color="yellowgreen" size="2" face="Arial" ALIGN="right">26 DE MARZO DE 2020</font></b>
-            </div>
-            <div id="LOCK">
-                <b><img src="PH.png"></b>
-            </div>
-            <div id="PASS">
-                <b><A href="#SECC30"><font color="yellowgreen" size="8" face="Arial">El mejor administrador de contrasenas para 2020</font></A></b><br>
-                <h><font color="yellowgreen" size="5" face="Arial">Deshagase de las notas adhesivas y obtenga tranquilidad. Nuestros administradores de contrasenas favoritos seran su primera defensa contra el hackeo.</h><br>
-                <b><font color="yellowgreen" size="2" face="Arial" ALIGN="right">26 DE MARZO DE 2020</font></b>
             </div>
         <div id="SECC1">
             <hr>
