--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="Pagina Principal/index.html">Entrar</a>
     </div>
     <div class="Comentarios">
-      <a href="formComentarios/Formulario.html">Comentarios</a>
+      <a href="https://mef-cat.000webhostapp.com">Comentarios</a>
     </div>
 
 </div>
