--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="Pagina Principal/index.html">Entrar</a>
     </div>
     <div class="Comentarios">
-      <a href="https://mef-cat-66.000webhostapp.com/index.html">Comentarios</a>
+      <a href="https://actividades-602-jc.000webhostapp.com/Black%20Cat%20News/formComentarios/index.html">Comentarios</a>
     </div>
 
 </div>
